# misis2024f-24-00-polevoi-d-v

./: .build.vc.bat  .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0004a.v01.cpp  0004a.v02.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0617a.v01.cpp  0617a.v02.cpp  1352a.v01.cpp  1352a.v02.cpp  1352a.v03.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp  arrayd.hpp  dynarr.cpp
prj.lab/arrayt/: CMakeLists.txt  arrayt.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/queuea/: CMakeLists.txt  queuea.cpp  queuea.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackl/: CMakeLists.txt  stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayt_doctest.cpp  complex_doctest.cpp  complex_test.cpp  queuea_doctest.cpp  rational_doctest.cpp  stackl_doctest.cpp
